# sgl

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  main.cpp
.github/workflows/: c-cpp.yml  codeql.yml  dev.yml  main.yml  pull.yml  release.yml
.qodo/: history.sqlite
docs/: #1-getting-started.html  #2-your-first-window.html  1-getting-started.html  2-your-first-window.html  LICENSE
engine/layouts/: basic_layout.json
engine/libraries/: README
engine/models/basic/2d/: board.vmodel  square.vmodel  triangle.imodel  triangle.vmodel
engine/models/basic/3d/: cube.vmodel
engine/models/tests/: vertex_color_test.imodel  vertex_color_test.vmodel
engine/models/ui/: box.vmodel  triangle.vmodel
engine/shaders/: default.fs  default.vs  default_nt.fs  default_nt.vs  light.fs  light.vs  ui.fs  ui.vs
engine/shaders/debug/: debug_model.fs  debug_normal.fs  debug_texcord.fs  debug_texcord.vs
engine/shaders/tests/: vertex_color_test.fs  vertex_color_test.vs  vertex_ui_color_test.vs
include/: component.h  dynamicstore.h  logger.h  object.h  objectfactory.h  scenedata.h  scenemanager.h  sceneobject.h  shader.h  time_utils.h  transform.h  window.h
include/SGL/: EBO.h  VAO.h  VBO.h  camera.h  component.h  dynamicstore.h  error_handler.h  libraryloader.h  logger.h  material.h  object.h  objectfactory.h  scenedata.h  scenemanager.h  sceneobject.h  shader.h  texture.h  time_utils.h  transform.h  vertex_attribute.h  window.h
include/SGL/LayoutManaging/: layoutdata.h  layoutmanager.h  layoutobject.h
include/SGL/SceneManaging/: scenedata.h  scenemanager.h  sceneobject.h
include/SGL/UI/: ui-element.h
include/SGL/components/: ColorChange.h  TestComponent.h
include/SGL/components/physics/: rb_dynamic.h  rb_static.h
include/SGL/components/physics/coliders/: colider_box.h
include/SGL/gameobjects/: cube.h
include/SGL/lightning/: enviroment.h
include/SGL/physics/: phys_object.h  phys_propreties.h  physics_world.h
include/SGL/utils/: basic_materials.h  debug_screen.h  free_fly_cam.h  lighting_debug.h
include/gameobjects/: cube.h  triangle.h
include/glad/: glad.h
scenes/: 2d_triangles.json  basic_scene.json
sgl-objectlib-sample/: main.cpp
src/: EBO.cpp  VAO.cpp  VBO.cpp  camera.cpp  component.cpp  error_handler.cpp  libraryloader.cpp  object.cpp  physics.cpp  scenedata.cpp  scenemanager.cpp  sceneobject.cpp  shader.cpp  texture.cpp  transform.cpp  ui-element.cpp  window.cpp
src/LayoutManaging/: layout_data.cpp  layout_manager.cpp  layout_object.cpp
src/SceneManaging/: scenedata.cpp  scenemanager.cpp  sceneobject.cpp
src/UI/: ui-element.cpp
src/glad/: glad.c
